Debug PQT4 V1 :package:

--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/datos-factura-construccion-rvrp/datos-factura-construccion-rvrp.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/datos-factura-construccion-rvrp/datos-factura-construccion-rvrp.component.html
@@ -88,11 +88,7 @@
             </div>
           </div>
         </div>
-        <p style="margin-top: 10px;"><strong>Valor facturado: </strong> ${{ valorFacturado | currency:'
-          ':'symbol-narrow':'.0-0' }} </p>
-
-        <!--
-            Se comenta el formulario de descuentos 'fix diseño' cualquier novedad restaurar codigo comentado
+        <p style="margin-top: 10px;"><strong>Valor facturado: </strong> ${{ valorFacturado | currency:'':'symbol-narrow':'.0-0' }} </p>
 
             <h2 class="card-subTitle">Descuentos dirección técnica asociados a la factura</h2>
             <div class="row">
@@ -206,7 +202,6 @@
                 </div>
               </div>
             </div>
-        -->
       </mat-card-content>
     </mat-card>
 
