--- a/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-contratacion/components/definir-fuentes-y-usos/definir-fuentes-y-usos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-contratacion/components/definir-fuentes-y-usos/definir-fuentes-y-usos.component.html
@@ -69,7 +69,7 @@
               aportante.get('estadoSemaforo').value !== null ? aportante.get('estadoSemaforo').value : 'sin-diligenciar'
             "
           >
-            Aportante {{ j + 1 }}
+          {{ aportante.get('nombreAportante').value }}
           </mat-panel-title>
         </mat-expansion-panel-header>
 
