--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/form-datos-proponentes-nuevo/form-datos-proponentes-nuevo.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/form-datos-proponentes-nuevo/form-datos-proponentes-nuevo.component.html
@@ -50,7 +50,12 @@
         </label>
       </div>
       <div class="col d-flex">
-        <mat-form-field class="full-width">
+        <mat-form-field
+          class="full-width"
+          [matTooltipPosition]="'above'"
+          matTooltip="Búsqueda sugerida, ingrese al menos un carácter"
+          matTooltipClass="info-tooltip"
+          >
           <input
             matInput
             #nombre
@@ -395,7 +400,12 @@
         </label>
       </div>
       <div class="col d-flex">
-        <mat-form-field class="full-width">
+        <mat-form-field
+          class="full-width"
+          [matTooltipPosition]="'above'"
+          matTooltip="Búsqueda sugerida, ingrese al menos un carácter"
+          matTooltipClass="info-tooltip"
+        >
           <input
             matInput
             #nombre2
@@ -1110,7 +1120,12 @@
               </label>
             </div>
             <div class="col d-flex">
-              <mat-form-field class="full-width">
+              <mat-form-field
+                class="full-width"
+                [matTooltipPosition]="'above'"
+                matTooltip="Búsqueda sugerida, ingrese al menos un carácter"
+                matTooltipClass="info-tooltip"
+              >
                 <input
                   matInput
                   #nombre
