--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/form-registrar-controversia-contractua/form-registrar-controversia-contractua.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/form-registrar-controversia-contractua/form-registrar-controversia-contractua.component.html
@@ -16,7 +16,12 @@
             </label>
           </div>
           <div class="col d-flex">
-            <mat-form-field class="full-width">
+            <mat-form-field
+              class="full-width"
+              [matTooltipPosition]="'above'"
+              matTooltip="Búsqueda sugerida, ingrese al menos un carácter"
+              matTooltipClass="info-tooltip"
+              >
               <input matInput #nombre2 type="text" maxlength="10" [formControl]="myFilter" required
                 [matAutocomplete]="auto2" />
               <mat-autocomplete #auto2="matAutocomplete">
