--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-solicitud-otros-costosservicios/form-solicitud-otros-costosservicios.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-solicitud-otros-costosservicios/form-solicitud-otros-costosservicios.component.html
@@ -35,7 +35,12 @@
                                   }">Número de contrato</label>
                             </div>
                             <div class="col d-flex">
-                                <mat-form-field class="full-width">
+                                <mat-form-field
+                                    class="full-width"
+                                    [matTooltipPosition]="'above'"
+                                    matTooltip="Búsqueda sugerida, ingrese al menos un carácter"
+                                    matTooltipClass="info-tooltip"
+                                >
                                     <input matInput #numeroContrato="matAutocompleteTrigger" type="text" maxlength="100"
                                         required [matAutocomplete]="auto" formControlName="numeroContrato">
                                     <mat-autocomplete #auto="matAutocomplete">
