--- a/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-disponibilidad-presupuestal/components/nueva-solicitud-especial/nueva-solicitud-especial.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-disponibilidad-presupuestal/components/nueva-solicitud-especial/nueva-solicitud-especial.component.html
@@ -388,7 +388,12 @@
                   </label>
                 </div>
                 <div class="col d-flex">
-                  <mat-form-field class="full-width">
+                  <mat-form-field
+                    class="full-width"
+                    [matTooltipPosition]="'above'"
+                    matTooltip="Búsqueda sugerida, ingrese al menos un carácter"
+                    matTooltipClass="info-tooltip"
+                  >
                     <!--<input  matInput
                           #numeroContrato
                           type="text"
