--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/registrar-solicitud-interventoria/registrar-solicitud-interventoria.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/registrar-solicitud-interventoria/registrar-solicitud-interventoria.component.html
@@ -18,7 +18,12 @@
           <label class="label-left" for="numeroContrato">Número de contrato:</label>
         </div>
         <div class="col d-flex">
-          <mat-form-field class="example-full-width">
+          <mat-form-field
+            class="example-full-width"
+            [matTooltipPosition]="'above'"
+            matTooltip="Búsqueda sugerida, ingrese al menos un carácter"
+            matTooltipClass="info-tooltip"
+          >
             <input #buscar type="text" aria-label="Number" matInput [formControl]="numeroContrato"
               [matAutocomplete]="auto" required>
             <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
