--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/registrar-solicitud/registrar-solicitud.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/registrar-solicitud/registrar-solicitud.component.html
@@ -23,7 +23,12 @@
           <label class="label-left" for="numeroContrato">Número de contrato:</label>
         </div>
         <div class="col d-flex">
-          <mat-form-field class="example-full-width">
+          <mat-form-field
+            class="example-full-width"
+            [matTooltipPosition]="'above'"
+            matTooltip="Búsqueda sugerida, ingrese al menos un carácter"
+            matTooltipClass="info-tooltip"
+          >
             <input
               #buscar
               type="text"
