--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/gestionar-balan-financ-trasl-rec/gestionar-balan-financ-trasl-rec.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/gestionar-balan-financ-trasl-rec/gestionar-balan-financ-trasl-rec.component.html
@@ -52,17 +52,14 @@
             <ng-container matColumnDef="sede">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Sede Educativa</th>
                 <td mat-cell *matCellDef="let element" align="center"> {{ element.sedeEducativa }} </td>
-            </ng-container>
-            <!--
-            <ng-container matColumnDef="numeroTraslados">
+            </ng-container><ng-container matColumnDef="numeroTraslados">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Número de traslados </th>
-                <td mat-cell *matCellDef="let element" align="center"> {{ element.numeroTraslados }} </td>
+                <td mat-cell *matCellDef="let element" align="center"> <span *ngIf="element.numeroTraslados == null">---</span><span *ngIf="element.numeroTraslados != null">{{ element.numeroTraslados }} </span></td>
             </ng-container>
             <ng-container matColumnDef="estadoBalance">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado del balance </th>
                 <td mat-cell *matCellDef="let element" align="center"> {{ element.estadoBalance }} </td>
             </ng-container>
-            -->
             <ng-container matColumnDef="gestion">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Gestión </th>
                 <td mat-cell *matCellDef="let element" align="center">
