--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/form-registrar-novedad-contrato/form-registrar-novedad-contrato.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/form-registrar-novedad-contrato/form-registrar-novedad-contrato.component.html
@@ -199,10 +199,10 @@
                     (addressForm.get('fechaInicio').invalid && estaEditando)
                   "
                 >
-                  Fecha de inicio de la
-                  <span *ngIf="novedadDescripcion.tipoNovedadCodigo === '1'">suspensión</span>
-                  <span *ngIf="novedadDescripcion.tipoNovedadCodigo === '2'">prórroga a la auspensión</span>
-                  <span *ngIf="novedadDescripcion.tipoNovedadCodigo === '6'">reinicio</span>
+                  Fecha de inicio 
+                  <span *ngIf="novedadDescripcion.tipoNovedadCodigo === '1'">de la suspensión</span>
+                  <span *ngIf="novedadDescripcion.tipoNovedadCodigo === '2'">de la prórroga a la suspensión</span>
+                  <span *ngIf="novedadDescripcion.tipoNovedadCodigo === '6'">de reinicio</span>
                 </label>
               </div>
               <div class="col d-flex">
@@ -265,10 +265,10 @@
                   (addressForm.get('fechaFinal').invalid && estaEditando)
                 "
               >
-                Fecha final de la
-                <span *ngIf="novedadDescripcion.tipoNovedadCodigo === '1'">suspensión</span>
-                <span *ngIf="novedadDescripcion.tipoNovedadCodigo === '2'">prórroga a la auspensión</span>
-                <span *ngIf="novedadDescripcion.tipoNovedadCodigo === '6'">reinicio</span>
+                Fecha final 
+                <span *ngIf="novedadDescripcion.tipoNovedadCodigo === '1'">de la suspensión</span>
+                <span *ngIf="novedadDescripcion.tipoNovedadCodigo === '2'">de la prórroga a la suspensión</span>
+                <span *ngIf="novedadDescripcion.tipoNovedadCodigo === '6'">de reinicio</span>
               </label>
             </div>
             <div class="col d-flex">
