--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-solicitud-novedades/components/tabla-solicitud-novedad-contractual/tabla-solicitud-novedad-contractual.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-solicitud-novedades/components/tabla-solicitud-novedad-contractual/tabla-solicitud-novedad-contractual.component.html
@@ -74,13 +74,13 @@
 
         <a mat-button color="warn" mat-raised-button color="accent" class="btn-table"
         [routerLink]="[ 'verDetalleEditarSolicitudNovedadObra', element.novedadContractualId ]"
-        *ngIf="element.estadoCodigo === '5'">
+        *ngIf="element.estadoCodigo === '5' || element.estadoCodigo === '16'">
         Ver detalle/Editar
       </a>
 
       <a mat-button color="warn" mat-raised-button color="accent" class="btn-table"
       [routerLink]="[ 'verDetalleSolicitudNovedadObra', element.novedadContractualId ]"
-      *ngIf=" element.estadoCodigo !== '4' && element.estadoCodigo !== '5'">
+      *ngIf=" element.estadoCodigo !== '4' && element.estadoCodigo !== '5' && element.estadoCodigo !== '16'">
       Ver detalle
     </a>
 
