--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/solicitud-novedad/solicitud-novedad.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/solicitud-novedad/solicitud-novedad.component.html
@@ -32,7 +32,7 @@
     <p>
       <strong>Valor del contrato:</strong>
       <span>
-        {{ novedad.proyectosContrato[0].valorTotal }}
+        {{ novedad.proyectosContrato[0].valorTotal | currency:'COP':'symbol-narrow':'.0-0' }}
       </span>
     </p>
     <p>
