--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/form-registrar-novedad-contrato/form-registrar-novedad-contrato.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/form-registrar-novedad-contrato/form-registrar-novedad-contrato.component.html
@@ -492,11 +492,15 @@
                   #plazoAdicionalDias
                   maxlength="2"
                   min="1"
-                  max="99"
+                  max="29"
                   required
                   (keypress)="validateNumberKeypress($event)"
+                  onkeyup="if(this.value>29) this.value = 29;"
                   onKeyPress="if(this.value.length>=this.maxLength) return false;"
                   oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
+                  [matTooltipPosition]="'above'"
+                  matTooltip="Campo numérico igual o menor a 29 días"
+                  matTooltipClass="info-tooltip"
                 />
               </mat-form-field>
 
