debug PQT4 V2 :package:

--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/datos-factura-construccion-rvrp/datos-factura-construccion-rvrp.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/datos-factura-construccion-rvrp/datos-factura-construccion-rvrp.component.html
@@ -9,8 +9,7 @@
       <h2 class="card-subTitle mainGris">Descripción de la factura</h2>
       <p><strong>Número de factura:</strong> {{ addressForm.get( 'numeroFactura' ).value }} </p>
       <p><strong>Fecha de factura:</strong> {{ addressForm.get( 'fechaFactura' ).value | date: 'dd/MM/yyyy' }} </p>
-      <p style="margin-top: 10px;"><strong>Valor facturado: </strong> ${{ valorFacturado | currency:'
-        ':'symbol-narrow':'.0-0' }} </p>
+      <p style="margin-top: 10px;"><strong>Valor facturado: </strong> {{ valorFacturado | currency:'':'symbol-narrow':'.0-0' }} </p>
     </mat-card-content>
   </mat-card>
 </ng-container>
@@ -88,7 +87,7 @@
             </div>
           </div>
         </div>
-        <p style="margin-top: 10px;"><strong>Valor facturado: </strong> ${{ valorFacturado | currency:'':'symbol-narrow':'.0-0' }} </p>
+        <p style="margin-top: 10px;"><strong>Valor facturado: </strong> {{ valorFacturado | currency:'':'symbol-narrow':'.0-0' }} </p>
 
             <h2 class="card-subTitle">Descuentos dirección técnica asociados a la factura</h2>
             <div class="row">
@@ -122,7 +121,7 @@
                 </div>
               </div>
             </div>
-            <section formArrayName="descuentos" *ngIf="descuentos.length > 0">
+            <section formArrayName="descuentos" *ngIf="descuentos.length > 0 && addressForm.get( 'aplicaDescuento' ).value === true">
               <div *ngFor="let descuento of descuentos.controls; index as i" [formGroup]="descuento">
                 <mat-card-title class="header-card--text alineacion-titulos2 mt-1em" style="padding-left: 0px; margin-top: 1em;">
                   Descuento {{ i + 1 }}
@@ -135,12 +134,17 @@
                       </div>
                       <div class="col">
                         <mat-form-field class="select-width">
-                          <mat-select formControlName="tipoDescuentoCodigo" required>
-                            <mat-option *ngFor="let tipoDescuento of tiposDescuentoArray" [value]="tipoDescuento.codigo">
-                              {{ tipoDescuento.nombre }}
-                            </mat-option>
+                          <mat-select formControlName="tipoDescuentoCodigo" required *ngIf="descuento.get('tipoDescuentoCodigo').value === null" (ngModelChange)="getCodigoTipoDescuento( $event )">
+                              <mat-option *ngFor="let tipoDescuento of tiposDescuentoArray" [value]="tipoDescuento.codigo">
+                                  {{ tipoDescuento.nombre }}
+                              </mat-option>
                           </mat-select>
-                        </mat-form-field>
+                          <mat-select formControlName="tipoDescuentoCodigo" required *ngIf="descuento.get('tipoDescuentoCodigo').value !== null">
+                              <mat-option *ngFor="let tipoDescuento of getTipoDescuentoSeleccionado( descuento.get('tipoDescuentoCodigo').value )" [value]="tipoDescuento.codigo">
+                                  {{ tipoDescuento.nombre }}
+                              </mat-option>
+                          </mat-select>
+                      </mat-form-field>
                       </div>
                     </div>
                   </div>
@@ -167,13 +171,13 @@
                     </div>
                   </div>
                 </div>
-                <div class="text-right" *ngIf="i === descuentos.length - 1">
+                <div class="text-right" *ngIf="i === descuentos.length - 1 && descuentos.disabled === false">
                   <button mat-button color="warn" type="button" class="btn-eliminar" (click)="addDescuento()">
                     <img src="assets/img/icon/mas.svg" alt="agregar">
                     Agregar otro descuento
                   </button>
                 </div>
-                <div class="text-right" *ngIf="descuentos.length > 1">
+                <div class="text-right" *ngIf="descuentos.length > 1 && descuentos.disabled === false">
                   <button mat-button color="warn" type="button" class="btn-eliminar" (click)="deleteDescuento( i, descuento.get( 'solicitudPagoFaseFacturaDescuentoId' ).value )">
                     <img src="assets/img/icon/menos.svg">
                     Eliminar descuento
@@ -181,7 +185,7 @@
                 </div>
               </div>
             </section>
-            <div class="row" *ngIf="descuentos.length > 0">
+            <div class="row" *ngIf="descuentos.length > 0 && addressForm.get( 'aplicaDescuento' ).value === true">
               <div class="col-md-8">
                 <div class="row">
                   <div class="pr-1">
