--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/gestionar-balan-financ-trasl-rec/gestionar-balan-financ-trasl-rec.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/gestionar-balan-financ-trasl-rec/gestionar-balan-financ-trasl-rec.component.html
@@ -54,7 +54,7 @@
                 <td mat-cell *matCellDef="let element" align="center"> {{ element.sedeEducativa }} </td>
             </ng-container><ng-container matColumnDef="numeroTraslados">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Número de traslados </th>
-                <td mat-cell *matCellDef="let element" align="center"> <span *ngIf="element.numeroTraslados == null">---</span><span *ngIf="element.numeroTraslados != null">{{ element.numeroTraslados }} </span></td>
+                <td mat-cell *matCellDef="let element" align="center"> <span *ngIf="element.numeroTraslado == null">---</span><span *ngIf="element.numeroTraslado != null">{{ element.numeroTraslado }} </span></td>
             </ng-container>
             <ng-container matColumnDef="estadoBalance">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado del balance </th>
@@ -63,9 +63,43 @@
             <ng-container matColumnDef="gestion">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Gestión </th>
                 <td mat-cell *matCellDef="let element" align="center">
-                    <button mat-raised-button color="accent" class="btn-table"
-                        (click)="validarBalance(element.proyectoId)">
+                    <a *ngIf="element.estadoBalanceCodigo === null || element.estadoBalanceCodigo === '0'"
+                        mat-button
+                        mat-raised-button
+                        color="accent"
+                        class="btn-table"
+                        [routerLink]="['validarBalance', element.proyectoId]"
+                    >
                         Validar balance
+                    </a> 
+                    <a *ngIf="element.estadoBalanceCodigo !== '0' && element.estadoBalanceCodigo !== '4'"
+                        mat-button
+                        mat-raised-button
+                        color="accent"
+                        class="btn-table"
+                        [routerLink]="['verDetalleEditarBalance', element.proyectoId]"
+                    >
+                        Ver detalle/Editar
+                    </a> 
+                    <a *ngIf="element.estadoBalanceCodigo === '4'"
+                        mat-button
+                        mat-raised-button
+                        color="accent"
+                        class="btn-table"
+                        [routerLink]="['verDetalleBalance', element.proyectoId]"
+                    >
+                        Ver detalle
+                    </a> 
+                    <button
+                        *ngIf="element.registroCompleto === true && element.estadoBalanceCodigo === '2'"
+                        mat-button
+                        mat-raised-button
+                        color="accent"
+                        class="btn-table"
+                        type="button"
+                        (click)="aprobarBalance(element.proyectoId)"
+                    >
+                        Aprobar Balance
                     </button>
                 </td>
             </ng-container>
