--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/traslado-recursos-gbftrec/traslado-recursos-gbftrec.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/traslado-recursos-gbftrec/traslado-recursos-gbftrec.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="addressForm" novalidate (ngSubmit)="onSubmit()">
+<form [formGroup]="addressForm" novalidate (ngSubmit)="onSubmit()" *ngIf="!esVerDetalle">
     <div align="center">
         <label class="label-left" for="requiereTransladoRecursos">¿Se requiere registrar un traslado de
             recursos entre los aportantes y fuentes que financian este proyecto, antes de aprobar el
@@ -83,6 +83,35 @@
         </button>
     </div>
 </form>
+<mat-card class="shipping-card var-main-gris" *ngIf="esVerDetalle">
+    <mat-card-header class="header-card header-card--margin">
+      <mat-card-title class="header-card--text">
+        Validación de balance financiero
+      </mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <p>
+        <strong>
+          <span>{{ addressForm.get('fechaCreacion').value | date: 'dd/MM/yyyy' }} </span>
+        </strong>
+      </p>
+      <p>
+        <strong>
+            ¿Se requiere registrar un traslado de
+            recursos entre los aportantes y fuentes que financian este proyecto, antes de aprobar el
+            balance financiero?
+        </strong>
+        
+        <span *ngIf="addressForm.get('requiereTransladoRecursos').value == true"> Si </span>
+        <span *ngIf="addressForm.get('requiereTransladoRecursos').value != true"> No </span>
+      </p>
+      <p
+        class="text-justify"
+        *ngIf="addressForm.get('justificacionTrasladoAportanteFuente').value != null && addressForm.get('justificacionTrasladoAportanteFuente').value != ''"
+        [innerHTML]="addressForm.get('justificacionTrasladoAportanteFuente').value"
+      ></p>
+    </mat-card-content>
+  </mat-card>
 <!--SOLO PARA EFECTOS DE MAQUETACIÓN-->
 <div class="text-center mb-3em mt-2em animatedDown" *ngIf="addressForm.get('requiereTransladoRecursos').value === true" >
     <a routerLink="/gestionarBalanceFinancieroTrasladoRecursos/registrarTraslado" mat-raised-button color="accent" class="btn-cargar-proyecto">Registrar traslado</a><br>  
