--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/registrar-revision-juridica/registrar-revision-juridica.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/registrar-revision-juridica/registrar-revision-juridica.component.html
@@ -37,7 +37,7 @@
         <strong>
           Tipo de solicitud:
         </strong>
-       
+       {{ tipoNovedadNombre }}
       </p>
     </mat-card-content>
   </mat-card>
