--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/verdetalle-solicitud-pago/verdetalle-solicitud-pago.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/verdetalle-solicitud-pago/verdetalle-solicitud-pago.component.html
@@ -155,12 +155,12 @@
                         <mat-card-content style="text-align: left;">
                             <p><strong>Fecha de solicitud:</strong> {{ solicitudPagoRegistrarSolicitudPago.fechaSolicitud | date: 'dd/MM/yyyy' }} </p>
                             <p><strong>Número de radicado SAC:</strong> {{ solicitudPagoRegistrarSolicitudPago.numeroRadicadoSac }} </p>
-                            <p *ngIf="solicitudPagoRegistrarSolicitudPago.solicitudPagoFase[0].esPreconstruccion === true"><strong>Fase del contrato:</strong> Fase 1 - Preconstrucción</p>
-                            <p *ngIf="solicitudPagoRegistrarSolicitudPago.solicitudPagoFase[0].esPreconstruccion === false"><strong>Fase del contrato:</strong> Fase 2 - Construcción</p>
+                            <p *ngIf="tienePreconstruccion === true"><strong>Fase del contrato:</strong> Fase 1 - Preconstrucción</p>
+                            <p *ngIf="tieneConstruccion === true"><strong>Fase del contrato:</strong> Fase 2 - Construcción</p>
                         </mat-card-content>
                     </mat-card>
                     <mat-accordion>
-                        <mat-expansion-panel class="expansion-style sub-expansion" *ngIf="solicitudPagoRegistrarSolicitudPago.solicitudPagoFase[0].esPreconstruccion === true">
+                        <mat-expansion-panel class="expansion-style sub-expansion" *ngIf="tienePreconstruccion === true">
                             <mat-expansion-panel-header class="expansion-style--header">
                                 <mat-panel-title class="expansion-style--title ">
                                     Fase 1 - Preconstrucción
@@ -173,37 +173,11 @@
                                             Criterios de pago incluidos en la factura
                                         </mat-panel-title>
                                     </mat-expansion-panel-header>
-                                    <p class="info-sub-title supportBlack">
-                                        <span><b>Monto máximo por pagar en esta factura:</b> {{ montoMaximoPendiente.montoMaximo | currency:'':'symbol-narrow':'.0-0' }} </span>
-                                        <span><b>Monto pendiente por pagar en la fase</b> {{ montoMaximoPendiente.valorPendientePorPagar | currency:'':'symbol-narrow':'.0-0' }} </span>
-                                    </p>
-                                    <div class="d-flex justify-content-center" *ngIf="criteriosArraySeleccionados.length > 0">
-                                        <strong>Criterios de pago:</strong>
-                                        <p *ngFor="let criterio of criteriosArraySeleccionados; index as i" style="margin-left: .4em;"> {{ filterCriterios( criterio.codigo ) }}<span *ngIf="criteriosArraySeleccionados.length - 1 !== i">,</span><span *ngIf="criteriosArraySeleccionados.length - 1 === i">.</span> </p>
-                                    </div>
-                                    <section *ngIf="criterios.length > 0">
-                                            <form [formGroup]="addressForm">
-                                                <div formArrayName="criterios">
-                                                    <div *ngFor="let criterio of criterios.controls; index as j" [formGroup]="criterio">
-                                                        <mat-card class="shipping-card var-main-gris" style="margin-top: 3em;">
-                                                            <mat-card-header class="header-card header-card--margin">
-                                                                <mat-card-title class="header-card--text textoGris">
-                                                                    {{ criterio.get( 'nombreCriterio' ).value }}
-                                                                </mat-card-title>
-                                                            </mat-card-header>
-                                                            <mat-card-content style="text-align: left;">
-                                                                <p style="margin-bottom: 2em;"><strong>Tipo de pago:</strong> {{ criterio.get( 'tipoPago' ).value.nombre }} </p>
-                                                                <div style="margin-top: 2em;" *ngFor="let concepto of getConceptos( j ).controls">
-                                                                    <p style="font-size: 16px;"><b> {{ concepto.get( 'conceptoPagoCriterioNombre' ).value }} </b></p>
-                                                                    <p><b>Valor facturado al concepto:</b> ${{ concepto.get( 'valorFacturadoConcepto' ).value | currency:' ':'symbol-narrow':'.0-0' }} </p>
-                                                                </div>
-                                                                <p style="margin-top: 2em;"><strong style="font-size: 16px;">Valor total de los conceptos:</strong> ${{ criterio.get( 'valorFacturado' ).value | currency:' ':'symbol-narrow':'.0-0' }} </p>
-                                                            </mat-card-content>
-                                                        </mat-card>
-                                                    </div>
-                                                </div>
-                                            </form>
-                                    </section>
+
+                                    <app-form-criterios-pago    [solicitudPago]="contrato.solicitudPagoOnly"
+                                                                [solicitudPagoCargarFormaPago]="solicitudPagoCargarFormaPago"
+                                                                [esVerDetalle]="true">
+                                    </app-form-criterios-pago>
                                 </mat-expansion-panel>
                                 <mat-expansion-panel class="expansion-style sub-expansion-black">
                                     <mat-expansion-panel-header class="expansion-style--header">
@@ -224,7 +198,7 @@
                             </mat-accordion>
                         </mat-expansion-panel>
     
-                        <mat-expansion-panel class="expansion-style sub-expansion" *ngIf="solicitudPagoRegistrarSolicitudPago.solicitudPagoFase[0].esPreconstruccion === false">
+                        <mat-expansion-panel class="expansion-style sub-expansion" *ngIf="tieneConstruccion === true">
                             <mat-expansion-panel-header class="expansion-style--header">
                                 <mat-panel-title class="expansion-style--title ">
                                     Fase 2 - Construcción
@@ -237,37 +211,12 @@
                                             Criterios de pago incluidos en la factura
                                         </mat-panel-title>
                                     </mat-expansion-panel-header>
-                                    <p class="info-sub-title supportBlack">
-                                        <span><b>Monto máximo por pagar en esta factura:</b> {{ montoMaximoPendiente.montoMaximo | currency:'':'symbol-narrow':'.0-0' }} </span>
-                                        <span><b>Monto pendiente por pagar en la fase</b> {{ montoMaximoPendiente.valorPendientePorPagar | currency:'':'symbol-narrow':'.0-0' }} </span>
-                                    </p>
-                                    <div class="d-flex justify-content-center" *ngIf="criteriosArraySeleccionados.length > 0">
-                                        <strong>Criterios de pago:</strong>
-                                        <p *ngFor="let criterio of criteriosArraySeleccionados; index as i" style="margin-left: .4em;"> {{ criterio.nombre }}<span *ngIf="criteriosArraySeleccionados.length - 1 !== i">,</span><span *ngIf="criteriosArraySeleccionados.length - 1 === i">.</span> </p>
-                                    </div>
-                                    <section *ngIf="criterios.length > 0">
-                                            <form [formGroup]="addressForm">
-                                                <div formArrayName="criterios">
-                                                    <div *ngFor="let criterio of criterios.controls; index as j" [formGroup]="criterio">
-                                                        <mat-card class="shipping-card var-main-gris" style="margin-top: 3em;">
-                                                            <mat-card-header class="header-card header-card--margin">
-                                                                <mat-card-title class="header-card--text textoGris">
-                                                                    {{ criterio.get( 'nombreCriterio' ).value }}
-                                                                </mat-card-title>
-                                                            </mat-card-header>
-                                                            <mat-card-content style="text-align: left;">
-                                                                <p style="margin-bottom: 2em;"><strong>Tipo de pago:</strong> {{ criterio.get( 'tipoPago' ).value.nombre }} </p>
-                                                                <div style="margin-top: 2em;" *ngFor="let concepto of getConceptos( j ).controls">
-                                                                    <p style="font-size: 1.8em;"><b> {{ concepto.get( 'conceptoPagoCriterioNombre' ).value }} </b></p>
-                                                                    <p><b>Valor facturado al concepto:</b> ${{ concepto.get( 'valorFacturadoConcepto' ).value | currency:' ':'symbol-narrow':'.0-0' }} </p>
-                                                                </div>
-                                                                <p style="margin-top: 2em;"><strong style="font-size: 1.8em;">Valor total de los conceptos:</strong> ${{ criterio.get( 'valorFacturado' ).value | currency:' ':'symbol-narrow':'.0-0' }} </p>
-                                                            </mat-card-content>
-                                                        </mat-card>
-                                                    </div>
-                                                </div>
-                                            </form>
-                                    </section>
+
+                                    <app-form-criterios-pago    [solicitudPago]="contrato.solicitudPagoOnly"
+                                                                [esPreconstruccion]="false"
+                                                                [solicitudPagoCargarFormaPago]="solicitudPagoCargarFormaPago"
+                                                                [esVerDetalle]="true">
+                                    </app-form-criterios-pago>
                                 </mat-expansion-panel>
                                 <mat-expansion-panel class="expansion-style sub-expansion-black" *ngIf="manejoAnticipoRequiere === true">
                                     <mat-expansion-panel-header class="expansion-style--header">
